Fix modal going off screen

--- a/src/style/modals.scss
+++ b/src/style/modals.scss
@@ -11,8 +11,10 @@
 
 .ant-modal-content {
   border-radius: 10px;
-  max-height: 100%;
   overflow-y: hidden;
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column;
 
   .ant-modal-header {
     padding-top: 36px;
@@ -62,6 +64,7 @@
 
   .ant-modal-body {
     padding: 10px 36px;
+    overflow-y: scroll;
   }
 
   .ant-modal-footer {
